--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
+.separator-box {
+  display: flex;
+  justify-content: center;
+}
+
 .separator {
+    width: 50%;
     margin-top: 1em;
     margin-bottom: 1em;
     display: flex;
